RESOLVED FIXED165299
Can not select whole line when using flexbox
https://bugs.webkit.org/show_bug.cgi?id=165299
Summary Can not select whole line when using flexbox
Samuel Williams
Reported 2016-12-02 03:14:04 PST
Created attachment 295938 [details] Working example. Cannot select both "xxx" and "foo = bar" in the attached example by clicking mouse cursor and dragging along line. Removing display: flexbox makes it possible, as expected.
Attachments
Working example. (569 bytes, text/html)
2016-12-02 03:14 PST, Samuel Williams
no flags
Failing example (568 bytes, text/html)
2016-12-02 03:16 PST, Samuel Williams
no flags
Patch (10.30 KB, patch)
2016-12-06 14:26 PST, alan
no flags
Samuel Williams
Comment 1 2016-12-02 03:16:07 PST
Created attachment 295939 [details] Failing example
alan
Comment 2 2016-12-06 13:26:21 PST
It's because RootInlineBox::selectionTopAdjustedForPrecedingBlock() assumes preceding block is always above the current line (while in flex layout, they could very well share the same line).
alan
Comment 3 2016-12-06 14:26:24 PST
Dave Hyatt
Comment 4 2016-12-06 14:34:09 PST
Comment on attachment 296322 [details] Patch r=me
WebKit Commit Bot
Comment 5 2016-12-06 15:07:09 PST
Comment on attachment 296322 [details] Patch Clearing flags on attachment: 296322 Committed r209427: <http://trac.webkit.org/changeset/209427>
WebKit Commit Bot
Comment 6 2016-12-06 15:07:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.