Can not select whole line when using flexbox https://bugs.webkit.org/show_bug.cgi?id=165299

Reviewed by David Hyatt.

Source/WebCore:

RootInlineBox::selectionTopAdjustedForPrecedingBlock assumes that the preceding block is
always above the current line. However in certain layout contexts (flex as an example) the block before
could just be on the same line as the current one.

This patch checks if we actually need to adjust the selection top to avoid vertical selection overlap.

Test: fast/flexbox/flexbox-fail-to-select-same-line.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::blockBeforeWithinSelectionRoot): Deleted.
* rendering/RenderBlock.h:
* rendering/RootInlineBox.cpp:
(WebCore::blockBeforeWithinSelectionRoot):
(WebCore::RootInlineBox::selectionTopAdjustedForPrecedingBlock):

LayoutTests:

* fast/flexbox/flexbox-fail-to-select-same-line-expected.html: Added.
* fast/flexbox/flexbox-fail-to-select-same-line.html: Added.


Canonical link: https://commits.webkit.org/183094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209427 268f45cc-cd09-0410-ab3c-d52691b4dbfc